UWP database connection now works in LAN.

--- a/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
@@ -8,11 +8,12 @@
 
 		<StackLayout>
 
-				<StackLayout BackgroundColor="#00CCBB">
+				<StackLayout BackgroundColor="#00CCBB" Padding="5">
 					<Label Text="Tscrump Weather Station" FontSize="48" HorizontalTextAlignment="Center" TextColor="White"/>
-					<Label Text="Make Weather Station great again!!" FontSize="24" HorizontalTextAlignment="Center" TextColor="White"/>					
+					<Label Text="Make Weather Stations great again!" FontSize="24" HorizontalTextAlignment="Center" TextColor="White"/>					
 				</StackLayout>
-			
+
+			<Label x:Name="TestLabel"/>
 		</StackLayout>
 
 	</ScrollView>
