--- a/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
@@ -3,16 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Tscrump_App"
              x:Class="Tscrump_App.MainPage">
-
+	
 	<ScrollView>
 
 		<StackLayout>
 
-				<StackLayout BackgroundColor="#00CCBB" Padding="5">
-					<Label Text="Tscrump Weather Station" FontSize="48" HorizontalTextAlignment="Center" TextColor="White"/>
-					<Label Text="Make Weather Stations great again!" FontSize="24" HorizontalTextAlignment="Center" TextColor="White"/>					
-				</StackLayout>
+			<StackLayout BackgroundColor="#00CCBB" Padding="5">
+				<Label Text="Tscrump Weather Station" FontSize="48" HorizontalTextAlignment="Center" TextColor="White"/>
+				<Label Text="Make Weather Stations great again!" FontSize="24" HorizontalTextAlignment="Center" TextColor="White"/>
+			</StackLayout>
 
+			<local:ChartView/>
 			<Label x:Name="TestLabel"/>
 		</StackLayout>
 
