Removed webview chart and started on custom Oxyplot solution

--- a/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
@@ -15,6 +15,7 @@
 				<Label Text="Make Weather Stations great again!" FontSize="24" HorizontalTextAlignment="Center" TextColor="White"/>
 			</StackLayout>
 
+			<local:FormsPlotView x:Name="Plot"/>
 			<Label x:Name="TestLabel"/>
 		</StackLayout>
 
