--- a/Website/css/freelancer.css
+++ b/Website/css/freelancer.css
@@ -66,10 +66,11 @@ hr.star-primary:after {
 }
 .img-centered {
   margin: 0 auto;
+  max-width: 100%;
 }
 header {
   text-align: center;
-  background: #AAAAAA;
+  background: #18BC9C;
   color: white;
 }
 header .container {
@@ -79,10 +80,12 @@ header .container {
 header img {
   display: block;
   margin: 0 auto 20px;
+  max-width: 100%;
 }
 
 .imagecenter {
     margin: auto;
+	max-width: 100%;
 }
 header .intro-text .name {
   display: block;
