Chart is now on its own page. Also started using NavigationPage.

--- a/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/MainPage.xaml
@@ -2,22 +2,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Tscrump_App"
-			 xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms"
              x:Class="Tscrump_App.MainPage"
 			 HeightRequest="100000000"
 			 WidthRequest="100000000">
 	
 	<ScrollView>
 
-		<StackLayout>
+		<StackLayout Spacing="5">
 
 			<StackLayout BackgroundColor="#00CCBB" Padding="5">
 				<Label Text="Tscrump Weather Station" FontSize="48" HorizontalTextAlignment="Center" TextColor="White"/>
 				<Label Text="Make Weather Stations great again!" FontSize="24" HorizontalTextAlignment="Center" TextColor="White"/>
 			</StackLayout>
 
-			<chart:SfChart x:Name="ChartView" HeightRequest="400" WidthRequest="400" Margin="5"/>
-			<Label x:Name="TestLabel"/>
+			<Button Text="View Chart" Clicked="ViewChartButtonClicked"/>
 		</StackLayout>
 
 	</ScrollView>
