More work on advanced options for chart. Database connects to the server now.

--- a/App/Tscrump App/Tscrump App/Tscrump_App/ChartPage.xaml
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/ChartPage.xaml
@@ -44,7 +44,7 @@
 
 			</Grid>
 
-			<Button x:Name="AdvancedOptionsButton" Text="Advanced options"/>
+			<Button x:Name="AdvancedOptionsButton" Text="Advanced options" Clicked="AdvancedOptionsButtonClicked"/>
 			
 		</StackLayout>
 
